// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders 1`] = `
<label
  className="sc-jWQtYj gPThTA"
>
  <input
    className="sc-kRfMSs jqFMHG"
    type="checkbox"
  />
  <span
    className="sc-gvnOrV jxgCDr"
  >
    I agree to receive bonus & marketing emails.
  </span>
</label>
`;

exports[`Checkbox renders Aria Label 1`] = `
<label
  className="sc-jWQtYj gPThTA"
>
  <input
    aria-label="Description of the checkbox's purpose."
    className="sc-kRfMSs jqFMHG"
    type="checkbox"
  />
  <span
    className="sc-gvnOrV jxgCDr"
  />
</label>
`;

exports[`Checkbox renders Aria Label List 1`] = `
<div
  className="flex flex-col"
>
  <label
    className="sc-kPJBXH eSqqzw"
  >
    <input
      className="sc-lgpvoJ brQUoX"
      disabled={true}
      name="test"
      type="radio"
    />
    <figure
      className="sc-imfVFo biApTi"
    />
    <span
      className="sc-hVAcom jcSRRe"
    >
      RadioButton
    </span>
  </label>
  <label
    className="sc-kPJBXH eSqqzw"
  >
    <input
      className="sc-lgpvoJ brQUoX"
      name="test"
      type="radio"
    />
    <figure
      className="sc-imfVFo biApTi"
    />
  </label>
  <div
    className="mt-2 mb-2"
  >
    <div
      className="sc-iAbAXu fDgsGI"
    >
      <div
        className="sc-hCSrFq bNfaHu"
      >
        Single line item
      </div>
      <span
        className="sc-iaRkIM jzjqjT"
      >
        <label
          className="sc-kPJBXH eSqqzw"
        >
          <input
            className="sc-lgpvoJ brQUoX"
            name="test"
            type="radio"
          />
          <figure
            className="sc-imfVFo biApTi"
          />
        </label>
      </span>
    </div>
  </div>
  <div>
    <label
      className="sc-kPJBXH eSqqzw"
    >
      <div
        className="sc-iAbAXu fDgsGI"
      >
        <div
          className="sc-hCSrFq bNfaHu"
        >
          Single line item
        </div>
        <span
          className="sc-iaRkIM jzjqjT"
        >
          <input
            className="sc-lgpvoJ brQUoX"
            type="radio"
          />
          <figure
            className="sc-imfVFo biApTi"
          />
        </span>
      </div>
    </label>
  </div>
</div>
`;

exports[`Checkbox renders Checked 1`] = `
<label
  className="sc-jWQtYj gPThTA"
>
  <input
    checked={true}
    className="sc-kRfMSs jqFMHG"
    readOnly={true}
    type="checkbox"
  />
  <span
    className="sc-gvnOrV jxgCDr"
  >
    I agree to receive bonus & marketing emails.
  </span>
</label>
`;

exports[`Checkbox renders Disabled 1`] = `
<label
  className="sc-jWQtYj gPThTA"
>
  <input
    className="sc-kRfMSs jqFMHG"
    disabled={true}
    type="checkbox"
  />
  <span
    className="sc-gvnOrV jxgCDr"
  >
    I agree to receive bonus & marketing emails.
  </span>
</label>
`;
